--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style> @-ms-viewport { width: device-width; } </style>
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/popupimg.css">
 <link rel="stylesheet" href="css/tooltip.css">
 </head>
 <body class="multiple-scenes ">
@@ -32,7 +33,7 @@
   <h1 class="sceneName"></h1>
 </div>
 
-
+<!-- 
 <div id="tooltip" class="tooltip">
   <div class="out">
     <div class="in">
@@ -41,9 +42,24 @@
   </div>
   <div class="tip">
     <p>Info 17</p>
-    <img src="img/sources/17.jpg">
+    <img id="myImg" src="img/sources/17.jpg">
   </div>
+</div> -->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+  <iframe class="modal-content" id="vid01" width='640' height='480' frameborder='0' allow='autoplay; encrypted-media' allowfullscreen></iframe>
+
+  <!-- Modal Caption (Image Text) -->
+  <!-- <div id="caption"></div> -->
 </div>
+
 <a href="#" id="autorotateToggle">
   <img class="icon off" src="img/play.png">
   <img class="icon on" src="img/pause.png">
@@ -78,6 +94,7 @@
   <img class="icon" src="img/minus.png">
 </a>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="vendor/es5-shim.js"></script>
 <script src="vendor/eventShim.js"></script>
 <script src="vendor/classList.js"></script>
@@ -89,6 +106,7 @@
 <script src="data.js"></script>
 <script src="index.js"></script>
 <script src="js/tooltip.js"></script>
+<script src="js/popupimg.js"></script>
 
 </body>
 </html>
