--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Project Title</title>
+<title>Penelitian Ekosistem Laut Dangkal dan Hutan Tropis</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
 <style> @-ms-viewport { width: device-width; } </style>
+<link rel="icon" href="img/favicon.png" sizes="16x16" type="image/png">
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/popupimg.css">
